<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="70dp"
            tools:context=".login.view.LoginActivity">

            <TextView
                android:id="@+id/register_welcome_text"
                style="@style/Theme.InstagramClone.TextViewBase.Form"
                android:text="@string/welcome_to_instagram"/>

            <co.gabrielcastro.instagramclone.login.view.LoadingButton
                android:id="@+id/register_welcome_button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/continuee" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/register_textview_terms"
        style="@style/Theme.InstagramClone.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/white"
        android:padding="24dp"
        android:text="@string/agree_terms_policy"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>