<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintVertical_bias="0.3"
            tools:context=".login.view.LoginActivity">

            <ImageView
                android:id="@+id/login_image_logo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@null"
                android:src="@drawable/instagram_logo_black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_email_input"
                style="@style/Theme.InstagramClone.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_email"
                    style="@style/Theme.InstagramClone.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_password_input"
                style="@style/Theme.InstagramClone.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_password"
                    style="@style/Theme.InstagramClone.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <co.gabrielcastro.instagramclone.common.view.LoadingButton
                android:id="@+id/login_button_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter" />

            <FrameLayout
                style="@style/Theme.InstagramClone.FormContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/gray_darker" />

                <TextView
                    style="@style/Theme.InstagramClone.TextViewBase"
                    android:layout_gravity="center"
                    android:background="?colorPrimary"
                    android:padding="8dp"
                    android:text="@string/or" />

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@id/login_textview_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_textview_register"
        style="@style/Theme.InstagramClone.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?colorPrimary"
        android:padding="24dp"
        android:text="@string/does_not_have_account"
        android:textColor="?colorOnPrimary"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>